# LocalSlidePoisson

./: .gitignore  CMakeLists.txt  README.md
Reconstructor.xcodeproj/: project.pbxproj
Reconstructor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Reconstructor.xcodeproj/project.xcworkspace/xcshareddata/: Reconstructor.xccheckout
Reconstructor.xcodeproj/project.xcworkspace/xcuserdata/corsy.xcuserdatad/: UserInterfaceState.xcuserstate
Reconstructor.xcodeproj/xcuserdata/corsy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Reconstructor.xcodeproj/xcuserdata/corsy.xcuserdatad/xcschemes/: Reconstructor.xcscheme  xcschememanagement.plist
Reconstructor/Reconstructor.xcodeproj/: project.pbxproj
Reconstructor/Reconstructor.xcodeproj/project.xcworkspace/xcuserdata/corsy.xcuserdatad/: UserInterfaceState.xcuserstate
include/: Application.h  BinaryNode.h  BinaryNode.inl.h  BinaryTree.h  BinaryTree.inl.h  BoundingBox.h  DenseMatrix.h  Face.h  HalfEdge.h  Index.h  IsoSurfaceExtractor.h  LinearSolver.h  MarchingCube.cpp  MarchingCube.h  Mesh.h  MeshData.h  MeshIO.h  Octree.h  OctreeCell.h  OctreeCell.inl.h  PoissonSurfaceReconstruction.h  Polynomial.h  Polynomial.inl  PolynomialItem.h  PolynomialItem.h~  PolynomialItem.inl  Polynormial.h  Quaternion.h  SparseMatrix.h  SparseMatrix.inl  Types.h  Utility.h  Vector2D.h  Vector3D.h  Vertex.h  Viewer.h
src/: BinaryNode.cpp  BinaryNode.h  BinaryTree.cpp  BoundingBox.cpp  CGSolver.cpp  Complex.cpp  Face.cpp  HalfEdge.cpp  IsoSurfaceExtractor.cpp  LinearSolver.cpp  LinearSystem.cpp  Mesh.cpp  MeshIO.cpp  Octree.cpp  OctreeCell.cpp  PoissonSurfaceReconstruction.cpp  Quaternion.cpp  SparseMatrix.cpp  Vector2D.cpp  Vector3D.cpp  Vertex.cpp  Viewer.cpp  main.cpp
